Fixed Button Alignment

--- a/style.css
+++ b/style.css
@@ -9,15 +9,11 @@ html, body {
 #header {
 	width: 100%;
 	height: 70px;
+	line-height: 40px;
 	background-color: #FFFFFF;
+	text-align: center;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, .14);
 }
-
-	#header h3 {
-		margin: 0;
-		padding: 10px;
-		text-align: center;
-		box-shadow: 0 2px 3px rgba(0, 0, 0, .14);
-	}
 
 #main-image {
 	width: 100%;
@@ -33,6 +29,13 @@ html, body {
 	background-color: #FFFFFF;
 }
 
+#categories {
+	width: 100%;
+	height: 50%;
+	display:;
+
+}
+
 #homelink {
 	align-content: center;
 	margin:10px;
@@ -43,8 +46,8 @@ html, body {
 {
 	background-color: #EEEEEE;
 	text-align: center;
-	width: 25%;
-	margin:0 auto;
+	width: 55%;
+	margin: auto;
 	padding: 10px;
 	margin-bottom: 50px;
 	box-shadow: 0 2px 3px rgba(0, 0, 0, .14);
@@ -72,11 +75,12 @@ html, body {
 #footer {
 	display: block;
 	width: 100%;
-	height: 200px;
+	height: 10%;
 	padding-top: 25px;
 	text-align: center;
 	color: #FFFFFF;
 	background-color: #3E454C;
+	margin-top: 100px;
 }
 
 	#footer p {
